# Parallelism-Lab2

./: CMakeLists.txt  main.cpp  output.csv
